# football-analytics

./: .gitignore  README.md  cfbd_api.py  downBreaks.py  pyproject.toml  run
.github/workflows/: lint.yml
Down Breaks/: README.md  downBreaks.py
Down Breaks/datasets/: michigan_state_2022.csv  northwestern_2022.csv  purdue_2022.csv  wisco_2022.csv
Down Breaks/prediction datasets/michigan_state/: michigan_state_2022_passdirection_predictions.csv  michigan_state_2022_playaction_predictions.csv  michigan_state_2022_run_concept_predictions.csv  michigan_state_2022_run_direction_predictions.csv  michigan_state_2022_run_pass_predictions.csv
Down Breaks/prediction datasets/northwestern/: northwestern_2022_passdirection_predictions.csv  northwestern_2022_playaction_predictions.csv  northwestern_2022_run_concept_predictions.csv  northwestern_2022_run_direction_predictions.csv  northwestern_2022_run_pass_predictions.csv
Down Breaks/prediction datasets/purdue/: purdue_2022_passdirection_predictions.csv  purdue_2022_playaction_predictions.csv  purdue_2022_run_concept_predictions.csv  purdue_2022_run_direction_predictions.csv  purdue_2022_run_pass_predictions.csv
Fourth Down Decision Making/: fourthDown.ipynb
Work In Progress/Fourth Down Decision Making/: README.md  cfbd_api.py  fourthDown.ipynb  fourthDownCategories.ipynb  fourthDownCategoriesNewEPA.ipynb  fourthDownNoCategories.ipynb  fourthDownNumerical.ipynb  fourthDownNumericalNewEPA.ipynb  fourth_down_results.xlsx  utils.py
Work In Progress/utils/: utils.py
down_breaks/: .python-version  README.md  graveyard.py  pyproject.toml
down_breaks/down_breaks/: arguments.py  downBreaks.py  neuralDownBreaks.ipynb  newDownBreaks.py  test.ipynb
down_breaks/down_breaks/datasets/: purdue_2022.csv
down_breaks/down_breaks/prediction datasets/michigan_state/: michigan_state_2022_passdirection_predictions.csv  michigan_state_2022_run_pass_predictions.csv
down_breaks/down_breaks/prediction datasets/northwestern/: northwestern_2022_passdirection_predictions.csv  northwestern_2022_playaction_predictions.csv  northwestern_2022_run_concept_predictions.csv  northwestern_2022_run_direction_predictions.csv  northwestern_2022_run_pass_predictions.csv
down_breaks/down_breaks/prediction datasets/purdue/: purdue_2022_playaction_predictions.csv  purdue_2022_run_pass_predictions.csv
down_breaks/down_breaks/prediction datasets/wisconsin/: Runpass_2022.csv  wisconsin_2022_passdirection_predictions.csv  wisconsin_2022_playaction_predictions.csv  wisconsin_2022_run_pass_predictions.csv
dvoa/: .python-version  README.md  pyproject.toml  readme.html
dvoa/dvoa/: big_ten_dvoa.xlsx  big_ten_dvoa_week_1.xlsx  big_ten_dvoa_week_1b.xlsx  big_ten_dvoa_week_2.xlsx  big_ten_dvoa_week_3.xlsx  big_ten_dvoa_week_4.xlsx  big_ten_dvoa_week_5.xlsx  cfbd_api.py  dvoa_calculation.ipynb
dvoa/src/: dvoa_calculation.ipynb
fourth-down-decision-making/: .python-version  README.md  pyproject.toml
fourth-down-decision-making/fourth_down_decision_making/: cfbd_api.py  fourthDownCategories.ipynb  fourthDownCategoriesNewEPA.ipynb  fourthDownNumerical.ipynb  fourthDownNumericalNewEPA.ipynb  fourth_down_decision_making.xlsx  fourth_down_results.xlsx  fourth_down_results_mean.xlsx  insights.ipynb  utils.py
fourth-down-decision-making/src/: fourthDownCategories.ipynb  fourthDownCategoriesNewEPA.ipynb  fourthDownNumericalNewEPA.ipynb  insights.ipynb  utils.py
utils/: utils.py
work_in_progress/: schematicTendencies.ipynb  webscrape.ipynb
(+4 files in other folders)
