[tool.poetry]
name = "football-analytics"
version = "0.1.0"
description = ""
authors = ["jordan-betterman <jordbetterman@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
keras = "^3.7.0"
argparse = "^1.4.0"
logging = "^0.4.9.6"
numpy = "<2.1.0"
openpyxl = "^3.1.5"
requests = "^2.32.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"