[tool.poetry]
name = "down-breaks"
version = "0.1.0"
description = ""
authors = ["jordan-betterman <jordbetterman@gmail.com>"]
readme = "README.md"
packages = [{include = "down_breaks"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "*"
pandas = ">2.0.0"
numpy = "<1.24"
logging = "*"
argparse = "*"
scikit-optimize = "*"
xgboost = "*"
pyarrow = "*"
matplotlib = "*"
fastapi = "*"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
