[tool.poetry]
name = "dvoa"
version = "0.1.0"
description = ""
authors = ["jordan-betterman <jordbetterman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0"
numpy = "*"
scikit-learn = "*"
ipykernel = "*"
requests = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
