[tool.poetry]
name = "fourth-down-decision-making"
version = "0.1.0"
description = ""
authors = ["jordan-betterman <jordbetterman@gmail.com>"]
readme = "README.md"
packages = [{include = "fourth_down_decision_making"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0"
numpy = "*"
scikit-learn = "*"
ipykernel = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
